modified height to fix some issues with visibility on mobile

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header{
 }
 #map{
 	width:100%;
-	height: 500px;
+	height: 600px;
 }
 .center{
   text-align: center;
@@ -104,6 +104,7 @@ header{
 .citySelect, .citySelectLabel{
 	display: none;
 }
+
 ol{
 	margin:0;
  	padding:0;
@@ -127,6 +128,10 @@ ol li .listButton:hover{
 
 	body{
 		background-position: 50% 20%;
+	}
+
+	#map{
+		height: 500px;
 	}
 
 }
